--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
@@ -152,7 +152,10 @@
                                 </constraints>
                                 <color key="tintColor" red="0.42352941176470588" green="0.42352941176470588" blue="0.42352941176470588" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="" image="eye" catalog="system"/>
+                                <state key="normal" title="" image="icbtEye"/>
+                                <connections>
+                                    <action selector="showPassword:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0uy-Dr-dZy"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 형식에 맞게 입력해 주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PvW-RS-Mfe">
                                 <rect key="frame" x="28" y="195" width="228" height="18"/>
@@ -381,9 +384,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="eye" catalog="system" width="128" height="81"/>
         <image name="icNotice" width="15" height="15"/>
         <image name="icbtBack" width="42" height="42"/>
+        <image name="icbtEye" width="42" height="42"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
