--- a/Cardna-iOS/Cardna-iOS/Source/Scene/MyPage/MyPage.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/MyPage/MyPage.storyboard
@@ -126,7 +126,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8U3-qV-22p">
                                                     <rect key="frame" x="16" y="30" width="45" height="45"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="C8B-LM-M3d">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="C8B-LM-M3d">
                                                             <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
                                                         </imageView>
                                                     </subviews>
